RESOLVED FIXED144984
Fix trivial typos in ApplyBlockElementCommand
https://bugs.webkit.org/show_bug.cgi?id=144984
Summary Fix trivial typos in ApplyBlockElementCommand
Sungmann Cho
Reported 2015-05-13 19:52:11 PDT
SSIA
Attachments
Patch (3.47 KB, patch)
2015-05-13 19:53 PDT, Sungmann Cho
no flags
Sungmann Cho
Comment 1 2015-05-13 19:53:17 PDT
WebKit Commit Bot
Comment 2 2015-05-13 21:09:15 PDT
Comment on attachment 253086 [details] Patch Clearing flags on attachment: 253086 Committed r184327: <http://trac.webkit.org/changeset/184327>
WebKit Commit Bot
Comment 3 2015-05-13 21:09:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.