Fix trivial typos in ApplyBlockElementCommand https://bugs.webkit.org/show_bug.cgi?id=144984

Patch by Sungmann Cho <sungmann.cho@navercorp.com> on 2015-05-13
Reviewed by Alexey Proskuryakov.

No new tests, no behavior change.

* editing/ApplyBlockElementCommand.cpp:
(WebCore::ApplyBlockElementCommand::formatSelection):
(WebCore::ApplyBlockElementCommand::endOfNextParagraphSplittingTextNodesIfNeeded):
(WebCore::ApplyBlockElementCommand::endOfNextParagrahSplittingTextNodesIfNeeded): Deleted.
* editing/ApplyBlockElementCommand.h:

Canonical link: https://commits.webkit.org/163031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184327 268f45cc-cd09-0410-ab3c-d52691b4dbfc